# queens-without-backtracking

./: .gitignore  COLORS.md  Cargo.toml  HEURISTICS.md  LICENSE-APACHE  LICENSE-MIT  PLAN.md  QUEENS.md  README.md  b.txt  build.rs  test_verify_partitions_graphillion.py  verify_partitions_graphillion.py
docs/: HEURISTICS.md  PLAN.md  QUEENS.md  _config.yml  index.md
solutions/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  130.txt  131.txt  132.txt  133.txt  134.txt  135.txt  136.txt  (+612 more)
src/: board.rs  counters.rs  generator.rs  lib.rs  main.rs  nregions.rs  output.rs  polyomino.rs  polyomino_enum.rs  rules.rs  state.rs
src/partition_count/: brute_force.rs  count.rs  mod.rs  partition_oracle.rs  simpath.rs  state.rs
tests/: partition_count.rs  stream_round_trip.rs
